<resources>
    <string name="app_name">ChatApp-2</string>
    <string name="or">OR</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="enter_email_or_username">Username or Email</string>
    <string name="enter_email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="upload_photo">UPLOAD PHOTO</string>
    <string name="log_out">LOG OUT</string>
    <string name="russel">fasdfasdfdsfasoifodiadfhkfjlkasfjoijjfoadfisadfnddsafd</string>
    <string name="default_web_client_id">448680679129-6lofi6hhj1g5fc5a9472e32v49as58ph.apps.googleusercontent.com</string>

</resources>